feat: add saved outfit like APIs
# Conflicts:
#	docs/openapi.json
#	src/repositories/outfit.repository.js
#	src/services/outfit.service.js
#	test/outfit.service.test.js
